fix-api-inconsistencies
