# src/api/features.go
@@ -2,14 +2,7 @@ package api
 
 import (
 	"net/http"
-
-	messages "github.com/skycoin/hardware-wallet-go/src/device-wallet/messages/go"
 )
-
-// FeaturesResponse is data returned by GET /api/v1/features
-type FeaturesResponse struct {
-	Features *messages.Features `json:"features"`
-}
 
 // URI: /api/v1/features
 // Method: GET
