# src/api/recovery.go
@@ -1,17 +1,20 @@
 package api
 
 import (
-	"fmt"
+	"encoding/json"
 	"net/http"
-	"strconv"
 )
+
+// RecoveryRequest is request data for /api/v1/recovery
+type RecoveryRequest struct {
+	WordCount     uint32 `json:"word_count"`
+	UsePassphrase bool   `json:"use_passphrase"`
+	DryRun        bool   `json:"dry_run"`
+}
 
 // URI: /api/v1/recovery
 // Method: POST
-// Args:
-//  word-count: mnemonic seed length
-//  use-passphrase: (boolean) ask for passphrase before starting operation
-//  dry-run: (bool) perform dry-run recovery workflow (for safe mnemonic validation).
+// Args: JSON Body
 func recovery(gateway Gatewayer) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodPost {
@@ -21,35 +24,21 @@ func recovery(gateway Gatewayer) http.HandlerFunc {
 
 		}
 
-		usePassphrase, err := parseBoolFlag(r.FormValue("use-passphrase"))
-		if err != nil {
-			resp := NewHTTPErrorResponse(http.StatusBadRequest, "invalid value for use-passphrase")
+		if r.Header.Get("Content-Type") != ContentTypeJSON {
+			resp := NewHTTPErrorResponse(http.StatusUnsupportedMediaType, "")
 			writeHTTPResponse(w, resp)
 			return
 		}
 
-		wordCount := r.FormValue("word-count")
-		if wordCount == "" {
-			resp := NewHTTPErrorResponse(http.StatusBadRequest, "missing word-count")
+		var req RecoveryRequest
+		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+			resp := NewHTTPErrorResponse(http.StatusBadRequest, err.Error())
 			writeHTTPResponse(w, resp)
 			return
 		}
+		defer r.Body.Close()
 
-		wc, err := strconv.ParseUint(wordCount, 10, 32)
-		if err != nil {
-			resp := NewHTTPErrorResponse(http.StatusBadRequest, fmt.Sprintf("invalid value %s for word-count", wordCount))
-			writeHTTPResponse(w, resp)
-			return
-		}
-
-		dryRun, err := parseBoolFlag(r.FormValue("dry-run"))
-		if err != nil {
-			resp := NewHTTPErrorResponse(http.StatusBadRequest, "invalid value for dry-run")
-			writeHTTPResponse(w, resp)
-			return
-		}
-
-		msg, err := gateway.Recovery(uint32(wc), usePassphrase, dryRun)
+		msg, err := gateway.Recovery(req.WordCount, req.UsePassphrase, req.DryRun)
 		if err != nil {
 			logger.Errorf("recovery failed: %s", err.Error())
 			resp := NewHTTPErrorResponse(http.StatusInternalServerError, err.Error())
