# src/api/set_mnemonic.go
@@ -1,13 +1,17 @@
 package api
 
 import (
+	"encoding/json"
 	"net/http"
 )
 
-// URI: /api/v1/setMnemonic
+type SetMnemonicRequest struct {
+	Mnemonic string `json:"mnemonic"`
+}
+
+// URI: /api/v1/set_mnemonic
 // Method: POST
-// Args:
-//  mnemonic: bip39 mnemonic seed [required]
+// Args: JSON Body
 func setMnemonic(gateway Gatewayer) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		if r.Method != http.MethodPost {
@@ -16,16 +20,23 @@ func setMnemonic(gateway Gatewayer) http.HandlerFunc {
 			return
 		}
 
-		mnemonic := r.FormValue("mnemonic")
-		if mnemonic == "" {
-			resp := NewHTTPErrorResponse(http.StatusBadRequest, "mnemonic is required")
+		if r.Header.Get("Content-Type") != ContentTypeJSON {
+			resp := NewHTTPErrorResponse(http.StatusUnsupportedMediaType, "")
 			writeHTTPResponse(w, resp)
 			return
 		}
 
+		var req SetMnemonicRequest
+		if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
+			resp := NewHTTPErrorResponse(http.StatusBadRequest, err.Error())
+			writeHTTPResponse(w, resp)
+			return
+		}
+		defer r.Body.Close()
+
 		// TODO(therealssj): add mnemonic check?
 
-		msg, err := gateway.SetMnemonic(mnemonic)
+		msg, err := gateway.SetMnemonic(req.Mnemonic)
 		if err != nil {
 			logger.Errorf("setMnemonic failed: %s", err.Error())
 			resp := NewHTTPErrorResponse(http.StatusInternalServerError, err.Error())
