# src/models/c_s_r_f_response.go
@@ -8,7 +8,6 @@ package models
 import (
 	strfmt "github.com/go-openapi/strfmt"
 
-	"github.com/go-openapi/errors"
 	"github.com/go-openapi/swag"
 )
 
@@ -17,38 +16,11 @@ import (
 type CSRFResponse struct {
 
 	// data
-	Data *CSRFResponseData `json:"data,omitempty"`
+	Data string `json:"data,omitempty"`
 }
 
 // Validate validates this c s r f response
 func (m *CSRFResponse) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateData(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *CSRFResponse) validateData(formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Data) { // not required
-		return nil
-	}
-
-	if m.Data != nil {
-		if err := m.Data.Validate(formats); err != nil {
-			if ve, ok := err.(*errors.Validation); ok {
-				return ve.ValidateName("data")
-			}
-			return err
-		}
-	}
-
 	return nil
 }
 
@@ -63,37 +35,6 @@ func (m *CSRFResponse) MarshalBinary() ([]byte, error) {
 // UnmarshalBinary interface implementation
 func (m *CSRFResponse) UnmarshalBinary(b []byte) error {
 	var res CSRFResponse
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
-
-// CSRFResponseData c s r f response data
-// swagger:model CSRFResponseData
-type CSRFResponseData struct {
-
-	// csrf token
-	CsrfToken string `json:"csrf_token,omitempty"`
-}
-
-// Validate validates this c s r f response data
-func (m *CSRFResponseData) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *CSRFResponseData) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *CSRFResponseData) UnmarshalBinary(b []byte) error {
-	var res CSRFResponseData
 	if err := swag.ReadJSON(b, &res); err != nil {
 		return err
 	}
