# src/models/recovery_request.go
@@ -1,0 +1,70 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// RecoveryRequest recovery request
+// swagger:model RecoveryRequest
+type RecoveryRequest struct {
+
+	// dry run
+	DryRun bool `json:"dry_run,omitempty"`
+
+	// use passphrase
+	UsePassphrase bool `json:"use_passphrase,omitempty"`
+
+	// word count
+	// Required: true
+	WordCount *int64 `json:"word_count"`
+}
+
+// Validate validates this recovery request
+func (m *RecoveryRequest) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateWordCount(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *RecoveryRequest) validateWordCount(formats strfmt.Registry) error {
+
+	if err := validate.Required("word_count", "body", m.WordCount); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *RecoveryRequest) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *RecoveryRequest) UnmarshalBinary(b []byte) error {
+	var res RecoveryRequest
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
